2018-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_expand_macro_arguments): Avoid using a 
	regex.

2018-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/60macro.t (empty_macro_argument): New test.

2018-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@titlepage>: Do not save
	'@author' as a global command.

2018-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_register_global_command): Remove an 
	argument.  Callers updated.

2018-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (labels_information): Avoiding creating 
	'extra' hash by mistake.

2018-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm,
	* tp/Texinfo/Common.pm (labels_information): Move to Common.pm 
	so that it can be called from tp/Texinfo/XS/parsetexi/Parsetexi.pm.

2018-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm,
	* tp/Texinfo/Encoding.pm,
	* tp/Texinfo/Parser.pm,
	* tp/Texinfo/Report.pm,
	* tp/Texinfo/Structuring.pm,
	* tp/Texinfo/Transformations.pm,
	* tp/Texinfo/Convert/Converter.pm
	* tp/Texinfo/Convert/DocBook.pm,
	* tp/Texinfo/Convert/HTML.pm,
	* tp/Texinfo/Convert/IXIN.pm,
	* tp/Texinfo/Convert/NodeNameNormalization.pm,
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Convert/Texinfo.pm,
	* tp/Texinfo/Convert/TexinfoSXML.pm,
	* tp/Texinfo/Convert/TexinfoXML.pm,
	* tp/Texinfo/Convert/Text.pm,
	* tp/Texinfo/Convert/Unicode.pm:

	Remove generated content such as "Mention other useful 
	documentation" and "Items to export into callers namespace by 
	default" (presumably from h2xs).  Remove copyright and license 
	from POD section at ends of files, as the copyright statement is 
	at the beginning of each file.  Update copyright years.

2018-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (%global_multiple_commands): Remove 'author'.
	(_register_global_command): No exception for 'author'.
